testing a fix for the behaviour of the layout with the  svg when zooming in on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -51,10 +51,6 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    min-height: calc(
-      var(--vh, 1vh) * 100 - var(--header-mobile-height) -
-        var(--button-actionable-mobile-margin) * 3 - var(--title-mobile-height) -
-        var(--button-actionable-mobile-height) * 2
-    );
+    min-height: -webkit-fill-available;
   }
 }
